Fix wrong color value for .disclosure-message__content

--- a/shared/scss/views/_breakage-form.scss
+++ b/shared/scss/views/_breakage-form.scss
@@ -402,7 +402,7 @@
 
     .environment--macos &,
     .environment--windows & {
-        color: var(--ds-color-theme-text-primary);
+        color: var(--ds-color-theme-text-secondary);
     }
 }
 
